[workspace]
members = ["contracts/*"]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = ""
homepage      = ""
documentation = ""
authors       = [
  "Sara NP <sara.neves.pereira@gmail.com>",
  "Blas Morkai <blas.morkai@gmail.com>",
]

[workspace.dependencies]
cosmwasm-schema = "1.1.6"
cosmwasm-std    = "1.1.5"
cw2             = "1.0.1"
cw20            = "1.0.0"
cw721           = "0.16.0" 
cw721-base = { version = "0.16.0", features = ["library"] }
cw-storage-plus = "1.0.1"
schemars        = "0.8.10"
serde           = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror       = "1.0.31"
cosmwasm-storage = "1.0.0"
cw-multi-test = "0.16.1"
cw-controllers = "1.0.0"
cw-utils        = "1.0.1"

[profile.release.package.staking]
codegen-units = 1
incremental = false

[profile.release.package.nft]
codegen-units = 1
incremental = false

[profile.release.package.agent]
codegen-units = 1
incremental = false


[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
