[workspace]
members = ["contracts/*"]

# [workspace.package]
# version       = "0.1.0"
# edition       = "2021"
# license       = "Apache-2.0"
# repository    = ""
# homepage      = ""
# documentation = ""
# authors       = [
#   "Sara NP <sara.neves.pereira@gmail.com>",
#   "Blas Morkai <blas.morkai@gmail.com>",
# ]

[profile.release.package.staking]
codegen-units = 1
incremental = false

[profile.release.package.nft]
codegen-units = 1
incremental = false

[profile.release.package.agent]
codegen-units = 1
incremental = false


[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
