[workspace]
members = ["contracts/*"]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = ""
homepage      = ""
documentation = ""
authors       = [
  "Sara NP <sara.neves.pereira@gmail.com>",
  "Blas Morkai <blas.morkai@gmail.com>",
]

[workspace.dependencies]
cosmwasm-schema = "1.1.9"
cosmwasm-std    = "1.1.9"
cw2             = "1.0.1"
cw721           = "0.16.0" 
cw721-base = { version = "0.16.0", features = ["library"] }
cw-storage-plus = "1.0.1"
schemars        = "0.8.11"
serde           = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror       = "1.0.38"
cosmwasm-storage = "1.0.0"
cw-multi-test = "0.16.2"
cw-controllers = "1.0.1"
cw-utils        = "1.0.1"
nft = {version = "0.1.0", path = "./contracts/nft", features=["library"]}
staking ={version = "0.1.0",path="./contracts/staking"}
getrandom = { version = "0.2", features = ["js"] }

[profile.release.package.staking]
codegen-units = 1
incremental = false

[profile.release.package.nft]
codegen-units = 1
incremental = false

[profile.release.package.agent]
codegen-units = 1
incremental = false


[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
