[package]
name = "nft"
version = "0.1.0"
authors       = [
  "Sara NP <sara.neves.pereira@gmail.com>",
  "Blas Morkai <blas.morkai@gmail.com>",
]
edition       = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std      = { workspace = true }
cw2               = { workspace = true }
cw721-base        = { workspace = true }
cw721             = { workspace = true }
cosmwasm-storage  = { workspace = true }
cw-storage-plus   = { workspace = true }
schemars          = { workspace = true }
serde             = { workspace = true }
thiserror         = { workspace = true }
cosmwasm-schema   = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }