[package]
name = "staking"
version = "0.1.0"
authors       = [
  "Sara NP <sara.neves.pereira@gmail.com>",
  "Blas Morkai <blas.morkai@gmail.com>",
]
edition       = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = { version = "1.1.5", features = ["staking"] }
cw2             = "1.0.1"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "1.0.1"
schemars        = "0.8.10"
serde           = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror       = "1.0.31"
cosmwasm-schema = "1.1.6"
cw-controllers = "1.0.0"
cw-utils        = "1.0.1"
cw-multi-test = "0.16.2"
getrandom = { version = "0.2", features = ["js"] }
